# easyopt

./: Cargo.toml  README.md
dual/: Cargo.toml
dual/src/: elementary.rs  lib.rs  ops.rs  static_size.rs  traits.rs
dual/src/static_size/: elf.rs  float_like.rs  from_primitive.rs  num.rs  num_ops.rs  ops.rs
easyopt/: Cargo.toml
easyopt/src/: criteria.rs  dual_ndarray.rs  error.rs  executor.rs  find_root.rs  lib.rs  monitor.rs  self_consistent.rs  traits.rs
easyopt/src/dual_ndarray/: ops.rs
easyopt/src/find_root/: solver.rs
easyopt/src/self_consistent/: solver.rs
easyopt/tests/: argmin.rs
find_root/: Cargo.toml
find_root/src/: misc.rs  newton.rs  sand.rs  steffensen.rs  wegstein.rs
integrate/: Cargo.toml
integrate/examples/: pendulum.rs
integrate/src/: lib.rs
integrate/tests/: solve_ode.rs
src/: dual.rs  lib.rs  self_consistent.rs
src/dual/: elementary.rs  ops.rs
src/self_consistent/: solver.rs
table-dump/: Cargo.toml
table-dump/src/: lib.rs  table.rs
