[package]
name = "easyopt"
version = "0.2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
argmin = "0.4.5"
dual = { path = "../dual" }
ndarray = "0.14"
num-traits = "0.2.14"
serde = "1.0.126"
table-dump = { path = "../table-dump" }
thiserror = "1.0.26"

[dev-dependencies]
approx = "0.5.0"
