[package]
name = "table-dump"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
base64 = "0.13.0"
serde = "1.0.126"
thiserror = "1.0.26"

[dev-dependencies]
ndarray = { version = "0.15.3", features = ["serde"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_bytes = "0.11.5"
